--- a/app/views/shared/_booking_period_selector.html.erb
+++ b/app/views/shared/_booking_period_selector.html.erb
@@ -1,36 +1,15 @@
-<%
-    first_month = Date.today()
-    second_month = first_month.next_month
-    third_month = second_month.next_month
-%>
-
 <div class="booking-period-selector">
-    (Mock calendar. not clickable)
-    <div class="booking-period-selector__cal-holder">
-        <%= render partial: "shared/month_calendar", locals: { date: first_month, ad: ad } %>
-        <%= render partial: "shared/month_calendar", locals: { date: second_month, ad: ad } %>
-        <%= render partial: "shared/month_calendar", locals: { date: third_month, ad: ad } %>
+    <div data-controller="kalendaeBookingSelector"></div>
+    <div>
+        Jeg vil leie fra:
+        <%= form.date_field :starts_at_date, data: { format: "yyyy.MM.dd" } %>
+        Hentes klokken:
+        <%= form.time_field :starts_at_time, value: "12:00"   %>
+
+        <br>
+        Jeg vil leie til:
+        <%= form.date_field :ends_at_date, data: { format: "yyyy.MM.dd" } %>
+        Leveres klokken:
+        <%= form.time_field :ends_at_time, value: "12:00" %>
     </div>
-
-    <div data-controller="kalendaeBookingSelector">
-        LAL
-    </div>
-
-    <details>
-        <summary>Skriv inn datoer manuelt</summary>
-        <div>
-            Jeg vil leie fra:
-            <%= form.date_field :starts_at_date, data: { format: "yyyy.MM.dd" } %>
-
-            <br>
-            Jeg vil leie til:
-            <%= form.date_field :ends_at_date, data: { format: "yyyy.MM.dd" } %>
-        </div>
-    </details>
-    Hentes klokken:
-    <%= form.time_field :starts_at_time  %>
-    <br>
-    Leveres klokken:
-    <%= form.time_field :ends_at_time %>
 </div>
-
