--- a/app/views/shared/_profile_quality_box.html.erb
+++ b/app/views/shared/_profile_quality_box.html.erb
@@ -29,8 +29,44 @@
         </tr>
     </table>
     <div class="profile-quality-box__verified-badge">
-        <%= image_tag("verified.png", size: "57x56", alt: "") %>
-        <br>
-        Denne brukeren er verifisert
+        <% if @user.phone_verified? and @user.email_verified? %>
+            <%= image_tag("verified.png", size: "57x56", alt: "") %>
+            <br>
+            Denne brukeren er verifisert
+        <% else %>
+            <%= image_tag("warning_shield.png", size: "64x64", alt: "") %>
+            <br>
+            Denne brukeren er IKKE (helt) verifisert ennå.
+        <% end %>
     </div>
+</div>
+<div class="profile-quality-box">
+    <table class="profile-quality-box__table">
+        <tr class="profile-quality-box__row">
+            <th class="profile-quality-box__th">
+                <%= image_tag("phone_icon.png", size: "19x19", alt: "" ) %>
+                Phone:
+            </th>
+            <td class="profile-quality-box__td">
+                <% if @user.phone_verified? %>
+                    Verifisert! <%= image_tag "safety_check.png" %>
+                <% else %>
+                    Ikke verifisert! <tt>:(</tt><%#= image_tag "safety_check.png" %>
+                <% end %>
+            </td>
+        </tr>
+        <tr class="profile-quality-box__row">
+            <th class="profile-quality-box__th">
+                <%= image_tag("mail_icon.png", size: "19x19", alt: "" ) %>
+                epost:
+            </th>
+            <td class="profile-quality-box__td">
+                <% if @user.email_verified? %>
+                    Verifisert! <%= image_tag "safety_check.png" %>
+                <% else %>
+                    Ikke verifisert! <tt>:(</tt><%#= image_tag "safety_check.png" %>
+                <% end %>            </td>
+        </tr>
+    </table>
+
 </div>
