move other missing functionality reminder box to control panel main page.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -61,6 +61,14 @@
                     Du ikke mottatt noen meldinger
                 <% end %>
             </div>
+
+            <%= render layout: "gray_box", locals: {title: "Flere valg"} do %>
+                <ul>
+                    <li><%= link_to "Verifisering",     "#" %></li>
+                    <li><%= link_to "Tilbakemeldinger", "#" %></li>
+                    <li><%= link_to "See / edit my locations", locations_path %></li>
+                </ul>
+            <% end %>
         </div>
 
     </div>
