Move popular topics to global config

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -15,4 +15,4 @@
     </div>
 </section>
 
-<%= render partial: "front_popular_box", locals: {topics: @popular_topics} %>
+<%= render partial: "front_popular_box" %>
