--- a/app/views/misc/_front_popular_box.html.erb
+++ b/app/views/misc/_front_popular_box.html.erb
@@ -1,7 +1,8 @@
 <%
-    topics = topics.map { |e|
-        e["style"] = "background-image: url(#{image_path(e["image"])});"
-        e
+    topics = Rails.configuration.x.frontpage.popular_ads
+    topics = topics.map { |t|
+        t[:style] = "background-image: url(#{image_path(t[:image])});"
+        t
     }
 %>
 
@@ -11,27 +12,27 @@
             <h3 class="front-popular-box__title">Inspirasjon</h3>
             <div class="front-popular-box">
                 <div class="front-popular-box__row1">
-                    <div class="front-popular-box__bgimg" style="<%= topics[0]["style"] %>">
-                        <%= link_to topics[0]["title"], (search_path q: topics[0]["term"]), class: "front-popular-box__link" %>
+                    <div class="front-popular-box__bgimg" style="<%= topics[0][:style] %>">
+                        <%= link_to topics[0][:title], (search_path q: topics[0][:term]), class: "front-popular-box__link" %>
                     </div>
-                    <div class="front-popular-box__bgimg" style="<%= topics[1]["style"] %>">
-                        <%= link_to topics[1]["title"], (search_path q: topics[1]["term"]), class: "front-popular-box__link" %>
+                    <div class="front-popular-box__bgimg" style="<%= topics[1][:style] %>">
+                        <%= link_to topics[1][:title], (search_path q: topics[1][:term]), class: "front-popular-box__link" %>
                     </div>
                 </div>
                 <div class="front-popular-box__row2">
-                    <div class="front-popular-box__bgimg" style="<%= topics[2]["style"] %>">
-                        <%= link_to topics[2]["title"], (search_path q: topics[2]["term"]), class: "front-popular-box__link" %>
+                    <div class="front-popular-box__bgimg" style="<%= topics[2][:style] %>">
+                        <%= link_to topics[2][:title], (search_path q: topics[2][:term]), class: "front-popular-box__link" %>
                     </div>
                     <div class="front-popular-box__col1">
-                        <div class="front-popular-box__bgimg" style="<%= topics[3]["style"] %>">
-                            <%= link_to topics[3]["title"], (search_path q: topics[3]["term"]), class: "front-popular-box__link" %>
+                        <div class="front-popular-box__bgimg" style="<%= topics[3][:style] %>">
+                            <%= link_to topics[3][:title], (search_path q: topics[3][:term]), class: "front-popular-box__link" %>
                         </div>
-                        <div class="front-popular-box__bgimg" style="<%= topics[4]["style"] %>">
-                            <%= link_to topics[4]["title"], (search_path q: topics[4]["term"]), class: "front-popular-box__link" %>
+                        <div class="front-popular-box__bgimg" style="<%= topics[4][:style] %>">
+                            <%= link_to topics[4][:title], (search_path q: topics[4][:term]), class: "front-popular-box__link" %>
                         </div>
                     </div>
-                    <div class="front-popular-box__bgimg" style="<%= topics[5]["style"] %>">
-                        <%= link_to topics[5]["title"], (search_path q: topics[5]["term"]), class: "front-popular-box__link" %>
+                    <div class="front-popular-box__bgimg" style="<%= topics[5][:style] %>">
+                        <%= link_to topics[5][:title], (search_path q: topics[5][:term]), class: "front-popular-box__link" %>
                     </div>
                 </div>
             </div>
