--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -7,9 +7,8 @@ $break-tiny: 640px;
 .front-search-block {
     position: relative;
     z-index: 1;
-        background-image: image-url('forrest.jpg');
-        background-repeat: no-repeat;
-        background-position: center;
+    background-repeat: no-repeat;
+    background-position: center;
 
     &__splash {
         position: absolute;
@@ -59,19 +58,18 @@ $break-tiny: 640px;
         background-color: rgba(0,0,0,0.7);
     }
 
-
     &__video-holder {
         position: relative;
-        height: 600px;
+        height: 500px;
         overflow: hidden;
         width: 100%;
 
         @media screen and (max-width: $break-large) {
-            height: 420px;
+            height: 400px;
         }
 
         @media screen and (max-width: $break-small) {
-            height: 380px;
+            height: 340px;
         }
 
     }
@@ -81,9 +79,16 @@ $break-tiny: 640px;
         display: inline-block;
         height: auto;
         width: 100%;
+        bottom: 0;
+
 
         @media screen and (max-width: $break-tiny) {
             display: none;
+        }
+
+        @media screen and (max-width: 976px) {
+            width: auto;
+            height: 100%;
         }
 
     }
