--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= stylesheet_link_tag    'http://fonts.googleapis.com/css?family=Lato:300,400,700' %>
 
+    <%= evil_icons_sprite %>
+
     <%= javascript_include_tag '//maps.googleapis.com/maps/api/js?key=AIzaSyAwciykMKFfGsTiDrqAwg80C5FCSq6vQr8' %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
