--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -30,11 +30,11 @@ $top-bar-height: 52px;
         @media screen and (max-width: 640px) {
             width: 44%;
         }
-
     }
 
     &__search-icon {
         vertical-align: middle;
+        bottom: 3px;
     }
 
     &__logo-link {
