--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -7,7 +7,7 @@
     <% if !@hide_search_field %>
         <%= form_tag("/search", method: "get", class: "top-bar__form") do %>
             <span class="top-bar__search-holder">
-                <%= image_tag "search_icon_small.png", alt: "", class: "top-bar__search-icon", size: "18x18" %>
+                <%= evil_icon 'ei-search', size: :s, class: 'top-bar__search-icon' %>
                 <%= text_field_tag 'q','', type: "text",  class: "top-bar__search-input", placeholder: 'Hva vil du leie?'  %>
             </span>
         <% end %>
