--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -20,7 +20,6 @@ $break-tiny: 640px;
         @media screen and (max-width: $break-small) {
             padding-top: 44px;
         }
-
     }
 
     &__title {
@@ -28,15 +27,17 @@ $break-tiny: 640px;
         font-size: 48px;
         font-weight: bold;
         margin: $standard-spacing 0 $standard-spacing 0;
-
+        text-shadow: 2px 2px 3px #333;
+        
         @media screen and (max-width: $break-small) {
             font-size: 36px;
         }
-
     }
     
     &__copy {
         color: white;
+        font-size: 120%;
+        text-shadow: 1px 2px 2px #333;
     }
     
     &__input {
