Added config for explainer URL and added it to a deatails/summary box on frontpage

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -30,4 +30,11 @@
 
 </section>
 
+<div class="explainer-video-section">
+    <details>
+        <summary><h4 class="explainer-video-section__title">Se hvordan det fungerer</h4></summary>
+        <iframe width="560" height="315" src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
+    </details>
+</div>
+
 <%= render partial: "front_popular_box" %>
