--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -97,5 +97,20 @@ $break-tiny: 640px;
 
 
 
+.explainer-video-section {
+    padding-top: 40px;
+    text-align: center;
 
+    summary {
+        outline: none;
+    }
+
+    summary::-webkit-details-marker {
+       display: none;
+    }
+
+    &__title {
+        text-decoration: underline;
+    }
+}
 
