--- a/app/views/misc/_front_popular_box.html.erb
+++ b/app/views/misc/_front_popular_box.html.erb
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row">
         <div class="twelve columns front-popular-box">
-            <h3 class="front-popular-box__title">Inspirasjon</h3>
+            <h3 class="front-popular-box__title">Populære kategorier</h3>
             <div class="front-popular-box">
                 <div class="front-popular-box__row1">
                     <div class="front-popular-box__bgimg" style="<%= topics[0][:style] %>">
