Added rgba for plendit blue

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -4,7 +4,7 @@ $standard-spacing: 12px;
 $large-spacing: $standard-spacing * 3;
 
 $color-background: #edefed;
-$color-plendit-blue: #2a96ff;
+$color-plendit-blue: #2a96ff; // rgb(42, 150, 255);
 $color-box-border: #9b9b9b;
 $color-gray-text: #454649;
 
