--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -1,4 +1,4 @@
-<div class="top-bar">
+<div class="top-bar <%= if overlaid then "top-bar--overlaid" end %>">
 
     <a class="top-bar__logo-link" href="/">
         <%= image_tag "plendit_logo.svg", alt: "Plendit homepage", class: "top-bar__logo", size: "115x33" %>
