Cleaned up login page a bit

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -42,7 +42,7 @@
     <label class="u-push-down">
         <%= f.check_box :insurance_required %>
         <span class="label-body">
-            Ja, leietaker må tegne <a href="#">forsikring</a> for å leie gjenstanden.
+            Leietaker må tegne <a href="#">forsikring</a> for å leie gjenstanden.
         </span>
     </label>
 
