--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -48,6 +48,23 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="one columns">
+                        Category:
+                    </div>
+
+                    <% @ad_categories.each do |a| %>
+                    <div class="two columns">
+                        <%= label_tag() do %>
+                            <%= check_box_tag "category", a[:category] %>
+                            <%= a[:title] %>
+                            <!-- <%= image_tag a[:image], size: a[:size] %> -->
+                        <% end %>
+                    </div>
+                    <% end %>
+
+                </div>
+
             <% end %>
         </div>
     </div>
