Fixed js part of category search

--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -56,7 +56,7 @@
                     <% @ad_categories.each do |a| %>
                     <div class="two columns">
                         <%= label_tag() do %>
-                            <%= check_box_tag "category", a[:category] %>
+                            <%= check_box_tag "category[]", a[:category] %>
                             <%= a[:title] %>
                             <!-- <%= image_tag a[:image], size: a[:size] %> -->
                         <% end %>
