Removed underline on inspiration boxes

--- a/app/assets/stylesheets/_front_search_block.scss
+++ b/app/assets/stylesheets/_front_search_block.scss
@@ -79,6 +79,7 @@
         padding: $standard-spacing / 2;
         border-radius: 4px;
         min-width: 70%;
+        text-decoration: none;
     }
 
     &__title {
