--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -50,14 +50,14 @@
 
                 <div class="row">
                     <div class="one columns">
-                        Category:
+                        Annonsetype:
                     </div>
 
                     <% @ad_categories.each do |a| %>
                     <div class="two columns">
-                        <%= label_tag() do %>
+                        <%= label_tag do %>
                             <%= check_box_tag "category[]", a[:category] %>
-                            <%= a[:title] %>
+                            <span class="label-body"><%= a[:title] %></span>
                             <!-- <%= image_tag a[:image], size: a[:size] %> -->
                         <% end %>
                     </div>
