--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -9,11 +9,13 @@ $top-bar-height: 52px;
     color: white;
 
     &--overlaid {
-        position: absolute;
-        top: 0;
-        width: 100%;
-        z-index: 199;
-        background-color: rgba(42, 150, 255, 0.7);
+         @media screen and (min-width: 640px) {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            z-index: 199;
+            background-color: rgba(42, 150, 255, 0.7);
+        }
     }
 
     &__form {
