--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,35 +9,25 @@
                 det bare er ditt fornavn som vises til andre brukere.
             <% end %>
 
-        <%= render partial: "edit_profile" %>
-        <%= render partial: "edit_registration" %>
+            <%= render partial: "edit_profile" %>
+            <%= render partial: "edit_registration" %>
 
-        </div>
-        <div class="four columns">
-            <%= render('shared/profile_image_box.html', user: current_user) %>
+            <%= render layout: "gray_box", locals: {title: "Bytte Profilbilde"} do %>
+              <%= render('shared/profile_image_box.html', user: current_user) %>
+            <% end %>
+            <%= render layout: "gray_box", locals: {title: "Endre Adresser"} do %>
+              <%= link_to  "See / edit my locations", locations_path %>
+            <% end %>
+
         </div>
     </div>
 </div>
 
-<!--
-<%#= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%#= devise_error_messages! %>
 
-  <div class="field">
-    <%#= f.label :image %><br />
-    <%#= image_tag resource.image_url %>
-  </div>
- 
-<%# end %>
--->
-
-<!--
+<%#
 <h3>Cancel my account</h3>
 
 # We need to think about what we will do once a user cancels his account. (delete, flag as deleted, allow email to be re-used?)
-<p>Unhappy? <%#= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
--->
-
-<%#= link_to  "See / edit my locations", locations_path %>
-
-<%= link_to "Back", :back %>
+# !!! this is a wasps nest of nastiness !!!
+<p>Unhappy? << button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete >> </p>
+%>
