Removed WIP stuff

--- a/app/views/ads/_ad_input_copy.html.erb
+++ b/app/views/ads/_ad_input_copy.html.erb
@@ -27,7 +27,7 @@
     <p>
         <%= image_tag "safety_check.png", alt: "", class: "ad-input-copy__badge", size: "41x69" %>
         Alle ting du leier ut, er forsikret opp til <%= Rails.configuration.x.insurance.max_insurance_value  %>
-        Les mer om din trygghet utleier <%= link_to "her", misc_wip_path %>.
+        Les mer om din trygghet utleier <%= link_to "her", root_path %>.
     </p>
 
 
@@ -37,7 +37,7 @@
          med oss på <%= Rails.configuration.x.customerservice.email %>
     </p>
     <p>
-        Du kan også lese <%= link_to "ofte stilte spørsmål", misc_wip_path %>.
+        Du kan også lese <%= link_to "ofte stilte spørsmål", root_path %>.
     </p>
 
 </section>
