--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,40 +1,43 @@
-<p id="notice"><%= notice %></p>
+<%= render partial: "shared/personal_bar", locals: { selected: "Dine annonser" } %>
 
-<h1>Listing Locations</h1>
+<div class="container">
+    <div class="row">
+        <div class="eight columns">
 
-<table>
-  <thead>
-    <tr>
-      <th>Location ID</th>
-      <td>User</td>
-      <th>Address Line</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Lat</th>
-      <th>Lon</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+            <p id="notice"><%= notice %></p>
 
-  <tbody>
-    <% @locations.each do |location| %>
-      <tr>
-        <td><%= location.id %></td>
-        <td><%= location.user_id %>[<small><%= location.user.safe_display_name %></small>]</td>
-        <td><%= location.address_line %></td>
-        <td><%= location.city %></td>
-        <td><%= location.state %></td>
-        <td><%= location.lat %></td>
-        <td><%= location.lon %></td>
-        <td><%= link_to 'Show', location %></td>
-        <td><%= link_to 'Edit', edit_location_path(location) %></td>
-        <td><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+            <h1>Mine adresser</h1>
 
-<br>
+            <table>
+                <thead>
+                <tr>
+                    <th>Adresse</th>
+                    <th>Poststed</th>
+                    <th colspan="2"></th>
+                </tr>
+                </thead>
 
-<%= link_to 'New Location', new_location_path %> <br />
-<%= link_to 'Back', users_path %>
+                <tbody>
+                <% @locations.each do |location| %>
+                    <tr>
+                        <td><%= location.address_line %></td>
+                        <td><%= location.post_code %> <%= location.city %></td>
+                        <!--
+                        <td><%= location.lat %></td>
+                        <td><%= location.lon %></td>
+                        -->
+                        <td><%= link_to 'Rediger', edit_location_path(location) %></td>
+                        <td><%= link_to 'Slett', location, method: :delete, data: {confirm: 'Er du sikker på at du vil slette?'} %></td>
+                    </tr>
+                <% end %>
+                </tbody>
+            </table>
+
+            <div>
+                <%= link_to 'Legg til sted', new_location_path %>
+                <br/>
+                <%= link_to 'Tilbake', users_path %>
+            </div>
+        </div>
+    </div>
+</div>
