--- a/app/views/application/_top_bar.html.erb
+++ b/app/views/application/_top_bar.html.erb
@@ -19,7 +19,7 @@
             <%= render('shared/avatar.html', user: current_user, size: "tiny", css_class: "top-bar__avatar") %>
 
             <strong class="top-bar__top-section">
-                <%= link_to current_user.safe_display_name, user_path, :class => "top-bar__navbar-link" %>.
+                <%= link_to current_user.safe_display_name, users_path, :class => "top-bar__navbar-link" %>.
                 <% if current_user.is_site_admin? %>
                     <span class="top-bar__admin-label">er <%= link_to 'admin', admin_root_path %></span>
                 <% end %>
