bugfix: link to a users profile

--- a/app/views/shared/_feedback_item_box.html.erb
+++ b/app/views/shared/_feedback_item_box.html.erb
@@ -1,7 +1,7 @@
 <div class="row feedback-item-box">
     <div class="three columns feedback-item-box__avatar-box">
         <%= render('shared/avatar.html', user: feedback.from_user, size: "medium" ) %>
-        <p><%= link_to feedback.from_user.safe_display_name, users_path( feedback.from_user.id ) %></p>
+        <p><%= link_to feedback.from_user.safe_display_name, user_path( feedback.from_user.id ) %></p>
     </div>
     <div class="nine columns feedback-item-box__body">
         <%= render('shared/stars.html', rating: feedback.user.calculate_average_rating ) %>
