use prettier routes when linking to ads

--- a/app/views/ads/_search_result_item.html.erb
+++ b/app/views/ads/_search_result_item.html.erb
@@ -1,10 +1,10 @@
 <div class="search-result-item" data-adid="<%= ad.id %>">
-    <%= link_to ad_path(ad.id), class: "search-result-item__link" do %>
+    <%= link_to ad_path( ad_to_param_pretty( ad ) ), class: "search-result-item__link" do %>
         <div class="search-result-item__image-holder">
             <%= image_tag Ad.find(ad.id).safe_image_url(:searchresult), alt: "", class: "search-result-item__image" %>
         </div>
     <% end %>
-    <%= link_to ad_path(ad.id), class: "search-result-item__link" do %>
+    <%= link_to ad_path( ad_to_param_pretty( ad ) ), class: "search-result-item__link" do %>
         <div class="search-result-item__text-container">
             <h6 class="search-result-item__title"><%= ad.title %></h6>
             <p class="search-result-item__body">
@@ -15,9 +15,9 @@
 
     <div class="search-result-item__profile">
         <div>
-            <%= render('shared/avatar.html', user: Ad.find(ad.id).user, size: "medium" ) %>
+            <%= render('shared/avatar.html', user: User.find(ad.user.id), size: "medium" ) %>
             <br>
-            <%= render('shared/stars.html', rating: Ad.find(ad.id).user.calculate_average_rating, small: true ) %>
+            <%= render('shared/stars.html', rating: User.find(ad.user.id).calculate_average_rating, small: true ) %>
         </div>
     </div>
     <div class="search-result-item__price-floater"><%= number_to_currency_pretty ad.price %><br>per&nbsp;dag</div>
