Improved address input

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -46,41 +46,60 @@
         </span>
     </label>
 
+
     <label class="u-push-down">
-        Adresse for henting:
+        Henteadresse:
     </label>
 
     <%- if @ad.user.locations.length > 0 -%>
+
+        <div data-controller="addressSelectionDimmer">
+            <%= hidden_field_tag "create_new_location", "0" %>
+
+            <%= select( :ad, :location_id,
+                        @ad.user.locations.map{ |l| ["#{l.address_line}, #{l.post_code} #{l.city}", l.id] },
+                        {},
+                        { class: 'u-full-width' } ) %>
+
+            <details>
+                <summary>Skriv inn en annen adresse:</summary>
+                <div>
+
+                    <%= f.fields_for :location, Location.new(user_id: current_user.id) do |fl| %>
+                        <%= fl.text_field :address_line, class: 'u-full-width', placeholder: 'Gateadresse' %>
+                        <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= resources_postal_place_path %>">
+                            <div class="four columns">
+                                <%= fl.number_field :post_code, class: "u-full-width", placeholder: "Postnr.", data: {"postal-code" => ""} %>
+                            </div>
+                            <div class="eight columns">
+                                <input type="text" class="u-full-width" disabled placeholder="Poststed" data-postal-place>
+                            </div>
+                        </div>
+                    <% end %>
+
+                </div>
+            </details>
+        </div>
+
+    <% else %>
+
         <div>
+            <%= hidden_field_tag "create_new_location", "1" %>
 
-            <label>
-                <%= check_box_tag "use_registered_location", "1", (not @ad.location.nil?) %>
-                <span class="label-body">
-                    Bruk en av mine registrert adresser:
-                </span>
-            </label>
+            <%= f.fields_for :location, Location.new(user_id: current_user.id) do |fl| %>
+                <%= fl.text_field :address_line, class: 'u-full-width', placeholder: 'Gateadresse' %>
+                <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= resources_postal_place_path %>">
+                    <div class="four columns">
+                        <%= fl.number_field :post_code, class: "u-full-width", placeholder: "Postnr.", data: {"postal-code" => ""} %>
+                    </div>
+                    <div class="eight columns">
+                        <input type="text" class="u-full-width" disabled placeholder="Poststed" data-postal-place>
+                    </div>
+                </div>
+            <% end %>
 
-            <div>
-                <%= select( :ad, :location_id,
-                    @ad.user.locations.map{ |l| ["#{l.address_line} - #{l.city} - #{l.post_code}", l.id] },
-                    {},
-                    { class: 'u-full-width' } ) %>
-            </div>
         </div>
-        <%= link_to "edit your locations here", locations_path %>
-    <%- end -%>
 
-    <label class="u-push-down">Legg til en ny adresse for denne annonsen:</label>
-    <%= f.fields_for :location, Location.new(user_id: current_user.id) do |fl| %>
-        <%= fl.text_field :address_line, class: 'u-full-width', placeholder: 'Gateadresse' %>
-        <div class="row" data-controller="postalPlaceFetcher" data-postal-place-url="<%= resources_postal_place_path %>">
-            <div class="four columns">
-                <%= fl.number_field :post_code, class: "u-full-width", placeholder: "Postnr.", data: {"postal-code" => ""} %>
-            </div>
-            <div class="eight columns">
-                <input type="text" class="u-full-width" disabled placeholder="Poststed" data-postal-place>
-            </div>
-        </div>
     <% end %>
 
     <div class="u-push-down">
