Autofocus input on frontpage

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -16,7 +16,7 @@
 
         <div>
             <%= form_tag("/search", method: "get") do %>
-              <%= text_field_tag 'q', '', class: 'front-search-block__input' %>
+              <%= text_field_tag 'q', '', class: 'front-search-block__input', data: {controller: "autoFocus"} %>
               <%= submit_tag 'Søk', class: 'front-search-block__search-button button-primary' %>
             <% end %>
         </div>
